--- a/aspnet-get-started/Views/Home/Index.cshtml
+++ b/aspnet-get-started/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>Developed By IndranilM</h1>
-    <p class="lead">Raghav company llcs --- great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <p class="lead">Raghav company llcs --- great Web sites and Web applications using HTML, CSS, JavaScript, Azure DevOps.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
