--- a/aspnet-get-started/Views/Home/Index.cshtml
+++ b/aspnet-get-started/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>Developed By IndranilM</h1>
+    <h1>Demo web app version1</h1>
     <p class="lead">Raghav company llcs --- great Web sites and Web applications using HTML, CSS, JavaScript, Azure DevOps.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
